# cleopatra

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  404.html  HISTORY.rst  README.md  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  versions.json
.github/: pull_request_template.md
.github/workflows/: conda-deployment.yml  conda.yml  create-github-release.yml  create_release.yml  github-pages-mkdocs.yml  github-release.yml  pypi-deployment.yml  pypi-release.yml  pypi.yml  tests.yml  ubuntu.yml  workflow.yml
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/change-log/: index.html
0.6.0/installation/: index.html
0.6.0/search/: search_index.json
cleopatra/: __init__.py  array.py  array_glyph.py  colors.py  config.py  map.py  statistical_glyph.py  statistics.py  styles.py
conda/: meta.yaml
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/change-log/: index.html
develop/installation/: index.html
develop/md/: index.html
develop/search/: search_index.json
docs/: change-log.md  conf.py  environment.yml  index.md  installation.md  requirements.txt
docs/api/: statistics-class.md
docs/source/: array-class.rst  arrayglyph-class.rst  colors-class.rst  conf.py  index.rst  installation.rst  statistics-class.rst  styles-class.rst
examples/: array_plot_examples.py  plot_rgb.py  statistical_plots_examples.py
main/: 404.html  index.html  sitemap.xml
main/change-log/: index.html
main/installation/: index.html
main/md/: index.html
main/search/: search_index.json
md/: index.html
md/array-glyph-class/: index.html
md/colors-class/: index.html
md/installation/: index.html
md/statistics-class/: index.html
md/styles-class/: index.html
search/: search_index.json
src/cleopatra/: array_glyph.py  colors.py  config.py  statistical_glyph.py  statistics.py  styles.py
tests/: conftest.py  mo_plot.py  test_array_glyph.py  test_colors.py  test_config.py  test_plot_array.py  test_plot_map.py  test_statistical_glyph.py  test_statistics.py
tests/data/: DEM5km_Rhine_burned_fill.npy  coello.npy  points.csv  s2a.npy
(+38 files in other folders)
